--- a/Why.html
+++ b/Why.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil:opsz,wght@10..72,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Play:wght@400;700&display=swap" rel="stylesheet">  
@@ -12,5 +12,6 @@
         </header>
         <h2>Why I prefer Dogs over Cats!</h2>
         <p>Dogs are better than Cats, because they are social! They are social animals that depend on you, and are known as "A Man's Best Friend!" How cool is a name like that! Another reason why Dogs are better than Cats is their Nature. When you try to play with a Cat, they just are very boring and sometimes even aggresive, but with Dogs, It's a whole different story. Dogs are miles more playful and active than Cats, and that's probably what you want from an animal. If you got a Cat, they would just lie around and do nothing really playful, but Dogs would help to cheer up your day if you're feeling lonely!</p>
+        
     </body>
     
