--- a/Why.html
+++ b/Why.html
@@ -14,6 +14,9 @@
         </header>
         <h2>Why I prefer Dogs over Cats!</h2>
         <p>Dogs are better than Cats, because they are social! They are social animals that depend on you, and are known as "A Man's Best Friend!" How cool is a name like that! Another reason why Dogs are better than Cats is their Nature. When you try to play with a Cat, they just are very boring and sometimes even aggresive, but with Dogs, It's a whole different story. Dogs are miles more playful and active than Cats, and that's probably what you want from an animal. If you got a Cat, they would just lie around and do nothing really playful, but Dogs would help to cheer up your day if you're feeling lonely!</p>
-        
+        Photo by <a href="https://unsplash.com/@phiabartek?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Josefína Bartková</a> on <a href="https://unsplash.com/photos/a-brown-dog-holding-a-white-ball-in-its-mouth-iK0PBXofrnc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        <br>
+        <img src="#" alt="A brown dog holding a white ball in its mouth"
+
     </body>
     
