--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>All about Dogs</title>
         <meta charset="utf-8">
+        <link href="/normalize.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
