--- a/Why.html
+++ b/Why.html
@@ -18,4 +18,5 @@
         <img src="images/q34eawgta4wergbe.jpg" alt="A brown dog holding a white ball in its mouth"
         
     </body>
+</html>
     
