--- a/Why.html
+++ b/Why.html
@@ -15,23 +15,20 @@
             Photo by <a href="https://unsplash.com/@castillcc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Cristian Castillo</a> on <a href="https://unsplash.com/photos/yellow-labrador-puppy-running-on-field-73pyV0JJOmE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             <h1 class="">Dog Gone Awesome</h1>
             <ul>
+                <a href="Why.html">Why I Like Dogs</a>
                 <li=<a href=""></a></li>
             </ul>
         </header>
         <br>
         <article>
-            <h2>Dogs Are Dynamite</h2>
-             <img src="images/jamie-street-s9Tf1eBDFqw-unsplash.jpg"> <br>
-            Photo by <a href="https://unsplash.com/@jamie452?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jamie Street</a> on <a href="https://unsplash.com/photos/brown-short-coated-dog-on-gray-couch-s9Tf1eBDFqw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-            <p>Dogs are awesome because they are so loyal. Dogs can learn a lot of tricks as well. You can even win awards to become the best dog trainer. If you want a best friend for life, get yourself a dog.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/R2ZAUDgL7bI?si=xPnUFhKrIAmKvT4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <h2>Why I prefer Dogs over Cats!</h2>
+        <p>Dogs are better than Cats, because they are social! They are social animals that depend on you, and are known as "A Man's Best Friend!" How cool is a name like that! Another reason why Dogs are better than Cats is their Nature. When you try to play with a Cat, they just are very boring and sometimes even aggresive, but with Dogs, It's a whole different story. Dogs are miles more playful and active than Cats, and that's probably what you want from an animal. If you got a Cat, they would just lie around and do nothing really playful, but Dogs would help to cheer up your day if you're feeling lonely!</p>
         </article>
         <article>
-            <footer>
-                <a href="Why.html">Why I Like Dogs</a>
-            </footer>
             </article>
     </body>
 </html>
-Photo by <a href="https://unsplash.com/@castillcc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Cristian Castillo</a> on <a href="https://unsplash.com/photos/yellow-labrador-puppy-running-on-field-73pyV0JJOmE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-      
+
+
+
+
