--- a/Why.html
+++ b/Why.html
@@ -15,8 +15,7 @@
             Photo by <a href="https://unsplash.com/@castillcc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Cristian Castillo</a> on <a href="https://unsplash.com/photos/yellow-labrador-puppy-running-on-field-73pyV0JJOmE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             <h1 class="">Dog Gone Awesome</h1>
             <ul>
-                <a href="Why.html">Why I Like Dogs</a>
-                <li=<a href=""></a></li>
+                <li=<a href="index.html"></a></li>
             </ul>
         </header>
         <br>
@@ -25,6 +24,8 @@
         <p>Dogs are better than Cats, because they are social! They are social animals that depend on you, and are known as "A Man's Best Friend!" How cool is a name like that! Another reason why Dogs are better than Cats is their Nature. When you try to play with a Cat, they just are very boring and sometimes even aggresive, but with Dogs, It's a whole different story. Dogs are miles more playful and active than Cats, and that's probably what you want from an animal. If you got a Cat, they would just lie around and do nothing really playful, but Dogs would help to cheer up your day if you're feeling lonely!</p>
         </article>
         <article>
+            <img src="images/q34eawgta4wergbe.jpg">
+            Photo by <a href="https://unsplash.com/@phiabartek?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Josefína Bartková</a> on <a href="https://unsplash.com/photos/a-brown-dog-holding-a-white-ball-in-its-mouth-iK0PBXofrnc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             </article>
     </body>
 </html>
