--- a/Why.html
+++ b/Why.html
@@ -17,7 +17,7 @@
             <ul>
                 <li=<a href="index.html"></a></li>
             </ul>
-        </header>
+            </header>
         <br>
         <article>
               <h2>Why I prefer Dogs over Cats!</h2>
@@ -27,6 +27,9 @@
             <img src="images/q34eawgta4wergbe.jpg">
             Photo by <a href="https://unsplash.com/@phiabartek?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Josefína Bartková</a> on <a href="https://unsplash.com/photos/a-brown-dog-holding-a-white-ball-in-its-mouth-iK0PBXofrnc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             </article>
+        <footer>
+            <a href="index.html">Back To Index</a>
+        </footer>
     </body>
 </html>
 
