--- a/Why.html
+++ b/Why.html
@@ -15,6 +15,9 @@
             <br>
             Photo by <a href="https://unsplash.com/@castillcc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Cristian Castillo</a> on <a href="https://unsplash.com/photos/yellow-labrador-puppy-running-on-field-73pyV0JJOmE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             <h1 class="">Dog Gone Awesome</h1>
+            <li>Snoopy</li>
+            <li>Clifford</li>
+            <li>Barkley</li>
             <ul>
                 <li=<a href="index.html"></a></li>
             </ul>
