--- a/Why.html
+++ b/Why.html
@@ -16,9 +16,9 @@
             Photo by <a href="https://unsplash.com/@castillcc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Cristian Castillo</a> on <a href="https://unsplash.com/photos/yellow-labrador-puppy-running-on-field-73pyV0JJOmE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             <h1>Dog Gone Awesome</h1>
              <ul>
-                <li>Snoopy</li>
-                <li>Clifford</li>
-                <li>Barkley</li>
+                <a href="https://en.wikipedia.org/wiki/Snoopy"target="blank"><li>Snoopy</li></a>
+                <a href="https://en.wikipedia.org/wiki/Clifford_the_Big_Red_Dog"target="blank"><li>Clifford</li></a>
+                <a href="https://muppet.fandom.com/wiki/Barkley"target="blank"><li>Barkley</li></a>
              </ul>
             </header>
         <br>
